--- a/src/common/components/Card/Card.module.scss
+++ b/src/common/components/Card/Card.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   width: max-content;
+  margin-bottom: 29px;
   height: 54px;
   flex-direction: column;
   justify-content: space-between;
