--- a/src/common/components/CoinTable/CoinTable.module.scss
+++ b/src/common/components/CoinTable/CoinTable.module.scss
@@ -1,3 +1,5 @@
+@import 'src/assets/styles/colors.scss';
+
 .coinTable {
   width: 100%;
   border-collapse: collapse; 
@@ -8,9 +10,8 @@
     & > tr {
       font-weight: 600;
       font-size: 10px;
-      background-color: #e4e8ec;
       height: 26px;
-      color: #aeb0b4;
+      color: $mutedblue;
       text-transform: uppercase;
       & > th {
         &:nth-child(2) {
@@ -27,13 +28,13 @@
     & > tr {
       position: relative;
       height: 50px;
-      border: 1px solid #E3E3E3;
       border-radius: 4px;
       height: 60px;
       font-weight: 400;
       cursor: pointer;
       &:hover {
-        background-color: #fafcfd;
+        background-color: $darkblue;
+        color: #ffffff;
       }
       & > td {
         height: inherit;
@@ -47,11 +48,11 @@
         }
       }
       & > td.red {
-        color: red;
+        color: #ff6161;
         font-weight: 600;
       }
       & > td.green {
-        color: green;
+        color: #32b132;
         font-weight: 600;
       }
 
