--- a/src/common/components/Select/Select.module.scss
+++ b/src/common/components/Select/Select.module.scss
@@ -1,3 +1,5 @@
+@import 'src/assets/styles/colors.scss';
+
 .selectContainer {
   position: relative;
   font-size: 16px;
@@ -23,18 +25,24 @@
 
 .selectListItem {
   list-style: none;
+  padding: 8px 0px;
   display: flex;
   padding-left: 16px;
-  align-items: center;
+  /* display: flex; */
+  justify-content: end;
+  /* align-items: center; */
+  cursor: pointer;
   cursor: pointer;
   &:hover {
-    background-color: lightgray;
+    background-color: $darkblue;
+    color: white;
   }
 }
 
 .defaultHeader, .placeholder {
   margin: 0;
-  padding: 0px 16px;
+  padding-left: 16px;
+  text-align: justify;
   font-weight: 400;
   line-height: 40px;
 }
