--- a/src/home/Currency/Currency.module.scss
+++ b/src/home/Currency/Currency.module.scss
@@ -1,19 +1,19 @@
 .container {
-  background-color: #172c49;
   height: calc(100% - 70px);
-  padding: 50px 50px 0;
   box-sizing: border-box;
+  max-width: 1264px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr auto;
   .largeGrid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr;
-    width: 100%;
-    margin: auto;
-    grid-gap: 80px;
+    display: inline-flex;
+    flex-direction: column;
+    width: min-content;
     .rank {
-      grid-row: 1 / 3;
       display: flex;
       align-items: center;
+      width: max-content;
+      margin-bottom: 29px;
       .text {
         font-size: 13px;
         font-weight: 600;  
