--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'), url(./static/fonts/Montserrat-Regular.ttf) format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'), url(./static/fonts/Montserrat-Bold.ttf) format('truetype');
+  font-weight: 600;
+}
+
 html, body, div#root, .App {
+  font-family: "Montserrat";
   height: 100%;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
